--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@nexssp/extend": "^2.0.1",
     "@nexssp/logdebug": "^1.0.15",
     "fast-glob": "^3.2.5",
     "marked": "^2.0.3",
