--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "src/plugin.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nexssp-test"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +19,8 @@
     "fast-glob": "^3.2.5",
     "marked": "^2.0.3",
     "marked-terminal": "^4.1.1"
+  },
+  "devDependencies": {
+    "@nexssp/test": "^1.1.1"
   }
 }
