--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@nexssp/plugin",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Plugin system for not only the Nexss Programmer.",
   "types": "./index.d.ts",
   "files": [
     "index.esm.js",
     "index.js",
-    "index.d.ts"
+    "index.d.ts",
+    "src/*"
   ],
   "exports": {
     ".": {
